--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "organism-react-scroll-nav": "^0.7.2",
     "popper": "^1.0.1",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.6.3",
     "react-scripts": "4.0.3",
+    "react-scroll-parallax": "^2.4.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
