--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.6.3",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^2.4.0",
     "web-vitals": "^0.2.4",
