add config homepage for deployment in package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-relaktasi",
+  "homepage": "https://faisalhakim.com/relaktasi/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
